js/js.translator/testData/incremental/invalidation/multiPlatformSimple/lib1/js/l1js.1.kt
actual fun lib1CommonFun(): Int = 1
